more edits to expt 2

--- a/writing/Cubert/Cubert manuscript.v3.tex
+++ b/writing/Cubert/Cubert manuscript.v3.tex
@@ -365,7 +365,7 @@ In a search of the British National Corpus, we identified the 40 most frequent s
 
 Each participant was presented with 30 sentences; 15 of these sentences were drawn randomly \ndg{was it random?} \gcs{it was random without replacement} from the original set of the 40 most frequent instances. The other 15 sentences were constructed by randomly pairing subjects and predicates from the original set of 40 to create novel sentences. \ndg{were there any restrictions? eg could a participant see the same predicate / subject twice? were the constructed sentences really random for each participant, or was there a fixed set of them?} \gcs{the only restriction was that the sentences were not among the original 40 most frequent ones. a participant could see the same predicate/subject twice in the novel sentences, and they were randomly constructed for each participant}
 
-Each sentence was presented as an utterance by a speaker, and participants were tasked with determining what the speaker meant. Participants rated two possible paraphrases on a sliding scale. The paraphrases were either distributive (with ``each'', \ref{bnc-each}) and collective (with ``together'', \ref{bnc-together}). We are primarily concerned with collective paraphrase endorsement rates; we expect distributive paraphrase endorsement rates to be redundant, but we included them to highlight the potential ambiguity for participants.
+Each sentence was presented as an utterance by a speaker, and participants were tasked with determining what the speaker meant. Participants rated two possible paraphrases on a sliding scale. The paraphrases were either distributive (with ``each'', \ref{bnc-each}) and collective (with ``together'', \ref{bnc-together}). Given our interest in rates of collective interpretations, we are primarily concerned with collective paraphrase endorsement rates; we expect distributive paraphrase endorsement rates to give redundant information.  We included both distributive and collective paraphrases to highlight the potential ambiguity for participants.
 
 \ex. \a. The \textsc{noun}s each were \textsc{adjective}. \label{bnc-each}
 \b. The \textsc{noun}s together were \textsc{adjective}. \label{bnc-together}
@@ -380,7 +380,7 @@ Scale endpoints corresponded to whether the paraphrase was ``definitely'' or ``d
 
 %\ndg{give some stats on the 'makes sense' judgements: of the original sentences, what was the mean percent sensible? range? for the constructed sentences?}
 Of the original 40 most frequent sentences, participants indicated that they ``made sense'' 95\% of the time. Of the novel sentences, participants indicated that they ``made sense'' 67\% of the time.
-To avoid effects of possible confusion on the ratings given, in the analyses reported below we only look at responses to utterances that participants said made sense. %\ndg{why?}
+To avoid possible confusion nonsensical interpretations might introduce, in the analyses reported below we only look at responses to utterances that participants said made sense. %\ndg{why?}
 
 We begin with a look at the range of collective endorsement ratings.\footnote{A look at distributive endorsement ratings, or normalized collective ratings (i.e., the difference between collective and distributive ratings) reveals similar patterns of results, owing to the high negative correlation between distributive and collective endorsement ratings ($r=-0.78$).} Fig.~\ref{sentence-coll} plots average collective endorsement ratings for each of the 40 most frequent sentences. Descriptively, we see a wide range of ratings, spanning from approximately 25\%  to 85\% endorsement; participants appear to be comfortable using the full scale. An important observation about the distribution of ratings in Fig.~\ref{sentence-coll} is its relatively smooth gradient: we fail to find clear groupings of predicates, such that they behave in one way or another with respect to collective interpretations. Stubbornly distributive \emph{small} indeed occurs toward the low end of collective endorsement ratings, but not markedly so.
 
@@ -447,12 +447,13 @@ As with Expt.~2a, participants judged whether the resulting sentences made sense
 Of the original 15 most frequent sentences, participants indicated that they made sense 98\% of the time; of the novel sentences, participants indicated that they made sense 87\% of the time.
 We again look only at responses to the original most frequent utterances that participants indicated made sense to them.
 
-\ndg{here, but also in other expts, should do some analysis of the distributive paraphrase... it's weird to just leave it out. if it is truly redundant with the collective measure, how about quantifying that? ie. report their correlation or such.}
+%\ndg{here, but also in other expts, should do some analysis of the distributive paraphrase... it's weird to just leave it out. if it is truly redundant with the collective measure, how about quantifying that? ie. report their correlation or such.}
 
-Fig.~\ref{bhtcoll} plots average collective endorsement ratings for each of the three predicates grouped by their subjects.\footnote{As before, distributive endorsement ratings provide redundant information, owing to their high negative correlation with the collective ratings ($r=-.98$).}
+Fig.~\ref{bhtcoll} plots average collective endorsement ratings for each of the three predicates grouped by their subjects.\footnote{As in Expt.~2a, distributive endorsement ratings provide redundant information, owing to their high negative correlation with the collective ratings ($r=-.98$).}
 %
 %
-To compare the predicates with each other, we fit a linear mixed effects model predicting collective endorsement by predicate, with random intercepts for participants and nouns, and random slopes for participants. The predicate predictor was dummy coded with \emph{heavy} as the reference level. There were main effects for both contrasts, such that \emph{big} ($\beta=-0.22$, $SE=0.07$, $t=-3.24$, $p<0.01$) and \emph{tall} ($\beta=-0.20$, $SE=0.06$, $t=-3.20$, $p<0.01$) led to lower rates of collective endorsement. Next, we examine the behavior of the subject nouns for each predicate in turn.
+To compare the predicates with each other, we fit a linear mixed effects model predicting collective endorsement by predicate, with random intercepts for participants and nouns, and random slopes for participants. The predicate predictor was dummy coded with \emph{heavy} as the reference level. There were main effects for both contrasts, such that \emph{big} ($\beta=-0.22$, $SE=0.07$, $t=-3.24$, $p<0.01$) and \emph{tall} ($\beta=-0.20$, $SE=0.06$, $t=-3.20$, $p<0.01$) led to lower rates of collective endorsement. We might take the split in behavior between \emph{heavy} on the one hand and \emph{big} and \emph{tall} on the other as evidence for a categorial distinction between complaisantly collective and stubbornly distributive predicates. However, comparing the predicates at the level of individual subject nouns suggests otherwise: the subject noun with the highest rates of collective endorsement for \emph{big}, \emph{waves}, yields rates of collective endorsement that do not differ significantly from \emph{heavy}'s least collective subject noun, \emph{men} (42\% \emph{big waves} vs.~38\% \emph{heavy men}; $\beta=-0.04$, $SE=0.09$, $t=-0.51$, $p=0.62$). The same holds of the comparison between \emph{tall}'s most collective subject noun, \emph{trees}, and \emph{heavy men} (30\% \emph{tall trees}; $\beta=-0.07$, $SE=0.08$, $t=-0.87$, $p=0.39$). \gcs{is this better?}
+%
 
 \begin{figure}[htb]
 	\centering
@@ -461,9 +462,9 @@ To compare the predicates with each other, we fit a linear mixed effects model p
 	\caption{Collective paraphrase endorsement rates for different nouns serving as the subject to the predicates \emph{big}, \emph{heavy}, and \emph{tall} (Expt.~2b).} \label{bhtcoll}
 \end{figure}
 
-\ndg{it's not clear to me that the ensuing are the most useful analyses to do... we want to know how judgements vary by noun. it is relevant to know if any nouns differ within predicate, and also whether the ranges of the predicates overlap....}
+%\ndg{it's not clear to me that the ensuing are the most useful analyses to do... we want to know how judgements vary by noun. it is relevant to know if any nouns differ within predicate, and also whether the ranges of the predicates overlap....}
 
-Starting with \emph{tall}, we fit a linear mixed effects model predicting collective endorsement by subject noun, with random intercepts for participants and nouns, and random slopes for participants. The subject noun predictor was dummy coded with \emph{trees} as the reference level (i.e., the subject with the highest average collective endorsement rating). Compared to \emph{trees}, we do not find an effect of the contrast with \emph{plants} ($\beta=0.00$, $SE=0.06$, $t=-0.07$, $p=0.95$), \emph{offspring} ($\beta=-0.03$, $SE=0.06$, $t=-0.55$, $p=0.59$), \emph{buildings} ($\beta=-0.06$, $SE=0.06$, $t=-1.00$, $p=0.32$), or \emph{windows} ($\beta=-0.09$, $SE=0.06$, $t=-1.52$, $p=0.13$). In other words, \emph{tall}'s subjects behave similarly in their general resistance to collective interpretation. 
+Next, we compare the behavior of the subject nouns within each predicate. Starting with \emph{tall}, we fit a linear mixed effects model predicting collective endorsement by subject noun, with random intercepts for participants and nouns, and random slopes for participants. The subject noun predictor was dummy coded with \emph{trees} as the reference level (i.e., the subject with the highest average collective endorsement rating). Compared to \emph{trees}, we do not find an effect of the contrast with \emph{plants} ($\beta=0.00$, $SE=0.06$, $t=-0.07$, $p=0.95$), \emph{offspring} ($\beta=-0.03$, $SE=0.06$, $t=-0.55$, $p=0.59$), \emph{buildings} ($\beta=-0.06$, $SE=0.06$, $t=-1.00$, $p=0.32$), or \emph{windows} ($\beta=-0.09$, $SE=0.06$, $t=-1.52$, $p=0.13$). In other words, \emph{tall}'s subjects behave similarly in their general resistance to collective interpretation. 
 
 Turning to \emph{big}, we performed a similar analysis, this time dummy coding \emph{waves} (the subject with the greatest average collective endorsement rating) as the reference level. There were significant effects of each contrast: \emph{rooms} ($\beta=-0.18$, $SE=0.06$, $t=-2.97$, $p<0.01$), \emph{boys} ($\beta=-0.22$, $SE=0.06$, $t=-3.53$, $p<0.01$), \emph{children} ($\beta=-0.21$, $SE=0.06$, $t=-3.54$, $p<0.01$), and \emph{houses} ($\beta=-0.23$, $SE=0.06$, $t=-3.68$, $p<0.01$); \emph{waves} stands out in its relatively high levels of collective endorsement with \emph{big}.
 
@@ -471,28 +472,29 @@ Finally, \emph{heavy}; here, \emph{bags} received the highest collective endorse
 
 \subsubsection{Discussion}
 
-\ndg{to edit...}
+%\ndg{to edit...}
 
 We have extended our paraphrase methodology beyond a simple reference task, using naturally-occurring examples of plural predications.
 % Our goals here were modest: to understand better the terrain of interpretation preferences for plural predications, without special attention to particular classes of predicates or subjects. Participants demonstrated full use of the paraphrase endorsement rating scales provided. Moreover, 
-The pattern of ratings sheds some light on the interpretation of plural predication. Perhaps most obvious is the absence of clear groups of predicates: one would be hard-pressed to read stubborn distributivity (or complaisant collectivity) off the gradient of ratings in Fig.~\ref{sentence-coll}.
+The pattern of ratings sheds some light on the status of stubborn distributivity. Perhaps most striking is the absence of clear groupings of predicates in the results of Expt.~2a: one would be hard-pressed to read stubborn distributivity (or complaisant collectivity) off the gradient of ratings in Fig.~\ref{sentence-coll}.
 
-The fact that disambiguation preferences differ by subject noun, not only by predicate further shifts the theoretical focus from lexical classes of predicates. If a plural predication can be more or less collective depending on the subject, then we must look at least partly to context in order to understand interpretation preferences.
-
+%The fact that disambiguation preferences differ by subject noun, not only by predicate further shifts the theoretical focus from lexical classes of predicates. If a plural predication can be more or less collective depending on the subject, then we must look at least partly to context in order to understand interpretation preferences.
 %After considering the full set of sentences, we narrowed our focus to those predicates occurring in more than one sentence (i.e., with different subject nouns). Narrower still, 
 
-We highlighted the case of stubbornly distributive \emph{small}, showing that the subject \emph{numbers} yielded higher rates of collective endorsement than other subject nouns. One possible explanation for the exceptional behavior of \emph{numbers} is thus: The collective size of numbers is naturally their sum, 
+%We highlighted the case of stubbornly distributive \emph{small}, showing that the subject \emph{numbers} yielded higher rates of collective endorsement than other subject nouns. One possible explanation for the exceptional behavior of \emph{numbers} is thus: The collective size of numbers is naturally their sum, 
 %Faced with the task of evaluating the relative size of a hypothetical set of numbers, participants converge on a single strategy, namely summing them up. In other words, the collective size of numbers 
-which is relatively predictable in context---more so than the collective size of children (determined by, e.g., height, weight, age, etc.) or of rooms and classes (determined by, e.g., number of occupants, seating capacity, overall volume, etc.). Moreover, numbers do not physically instantiate, so the contextual predictability of their collective size will not suffer from potential variability in their arrangement. 
-We explore this idea further in Expt.~2b, focussing on the theoretically relevant set of predicates: \emph{big}, \emph{heavy}, and \emph{tall}. \ndg{why?}
+%which is relatively predictable in context---more so than the collective size of children (determined by, e.g., height, weight, age, etc.) or of rooms and classes (determined by, e.g., number of occupants, seating capacity, overall volume, etc.). Moreover, numbers do not physically instantiate, so the contextual predictability of their collective size will not suffer from potential variability in their arrangement. 
+%We explore this idea further in Expt.~2b, focussing on the theoretically relevant set of predicates: \emph{big}, \emph{heavy}, and \emph{tall}. \ndg{why?}
 
-\ndg{other discussion begins here}
+%\ndg{other discussion begins here}
 
-As expected given its status as complaisantly collective, \emph{heavy} yields greater rates of collective paraphrase endorsement. Stubbornly distributive \emph{big} and \emph{tall} pattern together in their resistance to collective interpretations. This finding for \emph{big} aligns with the finding from Expt.~1, where we found a  similar pattern of stubborn distributivity for \emph{big}. For \emph{tall}, however, this finding is at odds with the relatively high rate of acceptance for collective interpretations participants demonstrated in Expt.~1.
+Narrowing our focus to the predicates \emph{big}, \emph{heavy}, and \emph{tall} in Expt.~2b, we found that complaisantly collective \emph{heavy} indeed does yield greater rates of collective paraphrase endorsement, and that stubbornly distributive \emph{big} and \emph{tall} pattern together in their resistance to collective interpretations. However, once we consider the effect of local linguistic context by comparing responses to individual subject nouns, the division between the two classes of predicates disappears. \emph{Big} and \emph{tall} are no longer so stubborn with the appropriate context (cf.~the relatively high rate of acceptance for collective interpretations participants demonstrated for \emph{tall} in Expt.~1).
 
-We interpret this finding for \emph{tall} as evidence for the context-dependent nature of these predications. In Expt.~1, participants had specific, salient sets against which to evaluate the property. In the current experiment, this information was lacking, and so were collective interpretations. In other words, without information about how the subject physically instantiates, participants are wary of assigning collective interpretations to predicates of physical extent. Here we again find evidence for the role of contextual predictability of the relevant property in the disambiguation of plural predications: in Expt.~1, collective height was particularly salient (boxes came stacked on top of each other); here, collective height was underspecified (it would depend on the specific physical arrangement of the subject in question).
+%This finding for \emph{big} aligns with the finding from Expt.~1, where we found a  similar pattern of stubborn distributivity for \emph{big}. For \emph{tall}, however, this finding is at odds with .
 
-We find additional evidence for the role of contextual predictability in the results for the predicate \emph{big}. As predicted, four out of the five subject nouns strongly resisted collective interpretations. However, with \emph{waves}, participants much more readily endorsed collective paraphrases. As was the case with \emph{small numbers} in Expt.~2a, this finding suggests that limiting the noise of a collective interpretation---by reducing the variability in the physical instantiation of the subject---increases the rates of that interpretation. We follow up on these findings concerning the role of contextual predictability and noise in interpretation with a direct manipulation of predictability in Expt.~3.
+%We interpret this finding for \emph{tall} as evidence for the context-dependent nature of these predications. In Expt.~1, participants had specific, salient sets against which to evaluate the property. In the current experiment, this information was lacking, and so were collective interpretations. In other words, without information about how the subject physically instantiates, participants are wary of assigning collective interpretations to predicates of physical extent. Here we again find evidence for the role of contextual predictability of the relevant property in the disambiguation of plural predications: in Expt.~1, collective height was particularly salient (boxes came stacked on top of each other); here, collective height was underspecified (it would depend on the specific physical arrangement of the subject in question).
+
+By comparing specific subject nouns within predicates, we begin to find evidence for the context-dependent nature of these predications. With \emph{big}, four out of the five subject nouns strongly resisted collective interpretations. However, with \emph{waves}, participants much more readily endorsed collective paraphrases. As was the case with \emph{small numbers} in Expt.~2a, this finding suggests that limiting the noise of a collective interpretation---by reducing the variability in the physical instantiation of the subject---increases the rates of that interpretation. We follow up on these findings concerning the role of contextual predictability and noise in interpretation with a direct manipulation of predictability in Expt.~3.
 
 Finally, with \emph{heavy}, we found that different subject nouns yielded different rates of collective interpretations. At first blush, these differences appear to track the probability that a speaker would have access to the information necessary to verify a collective interpretation. Lids and bags are probably picked up together, certainly more so than trees, and yet more so than loads or men. Without experiencing the collective weight of a plurality (e.g., of many loads), speakers lack knowledge about whether or not a collective interpretation would be true (e.g., what the total weight of the loads was); without this knowledge, the interpretation becomes less likely, and as a result its alternative, the distributive interpretation, becomes more likely. As with contextual predictability, we follow up on this result with a direct manipulation of speaker access to knowledge in Expt.~3.
 
